新增 bukkit 混合端模块和相关增强